[gd_scene load_steps=23 format=3 uid="uid://dspoo4djit734"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_8t0h5"]
[ext_resource type="Texture2D" uid="uid://bge3jfwc12h65" path="res://mainScreenBG/1.png" id="1_xp8if"]
[ext_resource type="Texture2D" uid="uid://bahjl3478wgf4" path="res://mainScreenBG/2.png" id="2_gwkkm"]
[ext_resource type="Texture2D" uid="uid://bn5x6xlmn6i2g" path="res://mainScreenBG/3.png" id="3_oxrbp"]
[ext_resource type="Texture2D" uid="uid://cki0o64d2wwc" path="res://mainScreenBG/4.png" id="4_mn1br"]
[ext_resource type="Texture2D" uid="uid://cluxjrbiqpheu" path="res://Button/FB59EA98-8AE2-4E3E-8874-4C0697EE66DB.png" id="5_od7yk"]
[ext_resource type="Texture2D" uid="uid://bkfgrbvh1jr5i" path="res://Button/333D604A-DD24-4961-BBA2-9B4C42CB5D38.png" id="6_mu1o7"]
[ext_resource type="Texture2D" uid="uid://cxh3viy3njenr" path="res://Button/2FAF389A-840B-4FC1-9A6D-27A09C465D1B.png" id="7_etmy2"]
[ext_resource type="Texture2D" uid="uid://ww5xyragrdn" path="res://Button/CB3D42D6-D4D5-4766-86E3-42200875DEFE.png" id="8_4gvvt"]
[ext_resource type="Texture2D" uid="uid://3gkm40gynd8t" path="res://Button/startButton.png" id="10_brktn"]
[ext_resource type="Texture2D" uid="uid://by5hbbiy66ux" path="res://Button/startButtonPressed.png" id="11_kja3o"]
[ext_resource type="Texture2D" uid="uid://c8ddjulwk626g" path="res://textPlaceHolder.png" id="12_ulhi5"]
[ext_resource type="Texture2D" uid="uid://crm2maio6avex" path="res://how to play.png" id="13_n02kk"]
[ext_resource type="Texture2D" uid="uid://cewixco06ohbv" path="res://Button/B1BDB2EC-7EB5-4B78-B3E1-CF8E812436BC.png" id="14_i2jrq"]
[ext_resource type="Texture2D" uid="uid://cpvwef4bvp38t" path="res://Button/52EFE692-B73A-4BA8-A1A5-42A7542B1FF8.png" id="15_yikb1"]
[ext_resource type="Texture2D" uid="uid://cgg82wvknggaf" path="res://mainScreenBG/CD63D0B2-1CDF-48D6-8DDD-71282B30CDF7.png" id="16_2t5d2"]
[ext_resource type="Texture2D" uid="uid://c1vpb813txc6i" path="res://credit.png" id="17_a8ui8"]
[ext_resource type="Texture2D" uid="uid://cv3iviw4jblf6" path="res://Button/verif/D5AAF7D4-1164-4FFE-B678-350C94FDB3D0.png" id="18_lb5lj"]
[ext_resource type="Texture2D" uid="uid://c60gte2oohfaw" path="res://Button/verif/4C95D4A9-C569-4C99-849D-FEB54CD3A41B.png" id="19_3nluc"]
[ext_resource type="FontFile" uid="uid://d2iu1skasybo4" path="res://press-start/prstart.ttf" id="19_ak1ii"]
[ext_resource type="Texture2D" uid="uid://c3nlxim3utsl8" path="res://mainScreenBG/Game Code.png" id="20_b1on3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_y8sbh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_xp8if")
}, {
"duration": 1.0,
"texture": ExtResource("2_gwkkm")
}, {
"duration": 1.0,
"texture": ExtResource("3_oxrbp")
}, {
"duration": 1.0,
"texture": ExtResource("4_mn1br")
}],
"loop": true,
"name": &"Default",
"speed": 4.0
}]

[node name="mainMenu" type="Node2D"]
position = Vector2(-10, 0)
script = ExtResource("1_8t0h5")

[node name="mainMenuAnim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(295.001, 170)
scale = Vector2(0.999998, 1.09677)
sprite_frames = SubResource("SpriteFrames_y8sbh")
animation = &"Default"
autoplay = "Default"
frame_progress = 0.924437

[node name="infoButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 12.0
offset_top = 292.0
offset_right = 55.0
offset_bottom = 335.0
texture_normal = ExtResource("5_od7yk")
texture_pressed = ExtResource("6_mu1o7")
metadata/_edit_use_anchors_ = true

[node name="htpButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 55.0
offset_top = 292.0
offset_right = 98.0
offset_bottom = 335.0
texture_normal = ExtResource("7_etmy2")
texture_pressed = ExtResource("8_4gvvt")
metadata/_edit_use_anchors_ = true

[node name="startButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 242.0
offset_top = 181.0
offset_right = 322.0
offset_bottom = 208.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("11_kja3o")
texture_pressed = ExtResource("10_brktn")
metadata/_edit_use_anchors_ = true

[node name="infoMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -10.0
offset_right = 7.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="infoMenu"]
layout_mode = 0
offset_left = -7.0
offset_top = 10.0
offset_right = 573.0
offset_bottom = 350.0
color = Color(0, 0, 0, 0.352941)

[node name="TextPlaceHolder" type="Sprite2D" parent="infoMenu"]
position = Vector2(283, 169)
texture = ExtResource("12_ulhi5")

[node name="HowToPlay" type="Sprite2D" parent="infoMenu"]
texture_filter = 1
position = Vector2(285, 165)
scale = Vector2(1.05695, 1.2905)
texture = ExtResource("13_n02kk")

[node name="infoCloseButton" type="TextureButton" parent="infoMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 483.0
offset_top = 43.0
offset_right = 526.0
offset_bottom = 86.0
texture_normal = ExtResource("14_i2jrq")
texture_pressed = ExtResource("15_yikb1")

[node name="creditMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -10.0
offset_right = 7.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="creditMenu"]
layout_mode = 0
offset_left = -7.0
offset_top = 13.0
offset_right = 573.0
offset_bottom = 353.0
color = Color(0, 0, 0, 0.352941)

[node name="TextPlaceHolder" type="Sprite2D" parent="creditMenu"]
position = Vector2(283, 169)
texture = ExtResource("12_ulhi5")

[node name="Cd63d0b2-1cdf-48d6-8ddd-71282b30cdf7" type="Sprite2D" parent="creditMenu"]
texture_filter = 1
position = Vector2(275, 188)
scale = Vector2(1.16491, 1.2129)
texture = ExtResource("16_2t5d2")

[node name="Credit" type="Sprite2D" parent="creditMenu"]
texture_filter = 1
position = Vector2(285.5, 218)
scale = Vector2(1.1875, 1.51111)
texture = ExtResource("17_a8ui8")

[node name="creditClose" type="TextureButton" parent="creditMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 483.0
offset_top = 43.0
offset_right = 526.0
offset_bottom = 86.0
texture_normal = ExtResource("14_i2jrq")
texture_pressed = ExtResource("15_yikb1")

[node name="inputCodeMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="ColorRect" parent="inputCodeMenu"]
modulate = Color(1, 1, 1, 0.266667)
layout_mode = 0
offset_top = -4.0
offset_right = 580.0
offset_bottom = 356.0
color = Color(0, 0, 0, 1)

[node name="TextPlaceHolder" type="Sprite2D" parent="inputCodeMenu"]
texture_filter = 1
position = Vector2(283, 169)
texture = ExtResource("12_ulhi5")

[node name="verifButton" type="TextureButton" parent="inputCodeMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 219.0
offset_top = 223.0
offset_right = 346.0
offset_bottom = 266.0
texture_normal = ExtResource("18_lb5lj")
texture_pressed = ExtResource("19_3nluc")

[node name="inputCloseButton" type="TextureButton" parent="inputCodeMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 483.0
offset_top = 43.0
offset_right = 526.0
offset_bottom = 86.0
texture_normal = ExtResource("14_i2jrq")
texture_pressed = ExtResource("15_yikb1")

[node name="GameCode" type="Sprite2D" parent="inputCodeMenu"]
texture_filter = 1
position = Vector2(282, 110)
texture = ExtResource("20_b1on3")

[node name="ColorRect" type="ColorRect" parent="inputCodeMenu"]
layout_mode = 0
offset_left = 174.0
offset_top = 160.0
offset_right = 388.0
offset_bottom = 192.0
color = Color(0, 0, 0, 0.592157)

[node name="verifCode" type="LineEdit" parent="inputCodeMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 174.0
offset_top = 160.0
offset_right = 2314.0
offset_bottom = 480.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("19_ak1ii")
theme_override_font_sizes/font_size = 100
placeholder_text = "ENTER YOUR CODE.."
alignment = 1

[node name="errorLabel" type="Label" parent="inputCodeMenu"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 194.0
offset_top = 205.0
offset_right = 914.0
offset_bottom = 266.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_ak1ii")
theme_override_font_sizes/font_size = 60
text = "INVALID CODE"

[connection signal="pressed" from="infoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="htpButton" to="." method="_on_htp_button_pressed"]
[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="infoMenu/infoCloseButton" to="." method="_on_info_close_button_pressed"]
[connection signal="pressed" from="creditMenu/creditClose" to="." method="_on_credit_close_pressed"]
[connection signal="pressed" from="inputCodeMenu/verifButton" to="." method="_on_verif_button_pressed"]
[connection signal="pressed" from="inputCodeMenu/inputCloseButton" to="." method="_on_input_close_button_pressed"]
